tests/spec/emit/snapshots/array_to_slice_chain_skip_hoists_unaddressable_receiver.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn make_arr() -> Array<int, 3> {
    [7, 8, 9]
  }
  
  fn f() -> bool {
    make_arr().to_slice().contains(8)
  }
---
package main

import "slices"

func makeArr() [3]int {
	return [3]int{7, 8, 9}
}

func f() bool {
	arr := makeArr()
	return slices.Contains(arr[:], 8)
}
