tests/spec/emit/snapshots/array_to_slice_chain_skip_identifier_form.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn f(arr: Array<int, 3>) -> bool {
    Slice.contains(Array.to_slice(arr), 2)
  }
---
package main

import "slices"

func f(arr [3]int) bool {
	return slices.Contains(arr[:], 2)
}
