tests/spec/emit/snapshots/array_to_slice_copies_into_new_slice.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn to_slice(a: Array<int, 3>) -> Slice<int> {
    a.to_slice()
  }
---
package main

import "slices"

func toSlice(a [3]int) []int {
	return slices.Clone(a[:])
}
