tests/spec/emit/snapshots/array_type_in_signature.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn first(xs: Array<int, 3>) -> int {
    xs[0]
  }
---
package main

func first(xs [3]int) int {
	return xs[0]
}
