tests/spec/emit/snapshots/array_zero_value.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  struct Buf {
    data: Array<int, 4>,
  }
  
  fn empty() -> Buf {
    Buf { .. }
  }
---
package main

type Buf struct {
	data [4]int
}

func empty() Buf {
	return Buf{data: [4]int{}}
}
