tests/spec/emit/snapshots/array_zero_value_struct_field_with_option_element.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  struct Horse {
    speed: int,
    fast: Option<int>,
  }
  
  struct Stable {
    horses: Array<Horse, 2>,
  }
  
  fn empty() -> Stable {
    Stable { .. }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Horse struct {
	speed int
	fast  lisette.Option[int]
}

type Stable struct {
	horses [2]Horse
}

func empty() Stable {
	return Stable{horses: func() [2]Horse {
		var arr [2]Horse
		for i := range arr {
			arr[i] = Horse{}
		}
		return arr
	}()}
}
