tests/spec/emit/snapshots/as_binding_on_concrete_struct.snap
---
source: tests/spec/emit/patterns.rs
description: "input: \nstruct Point { x: int, y: int }\n\nfn test(p: Point) -> int {\n  match p {\n    Point { x, .. } as pt => x + pt.y,\n  }\n}\n"
---
package main

type Point struct {
	x int
	y int
}

func test(p Point) int {
	return p.x + p.y
}
