tests/spec/emit/snapshots/as_binding_on_enum_variant.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  enum Status { Good(int), Bad(string) }
  
  fn test(s: Status) -> int {
    match s {
      Good(n) as g => n,
      Bad(_) => -1,
    }
  }
---
package main

func MakeStatusGood(arg0 int) Status {
	return Status{Tag: StatusGood, Good: arg0}
}

func MakeStatusBad(arg0 string) Status {
	return Status{Tag: StatusBad, Bad: arg0}
}

type StatusTag uint8

const (
	StatusGood StatusTag = iota
	StatusBad
)

type Status struct {
	Tag  StatusTag
	Good int
	Bad  string
}

func test(s Status) int {
	if s.Tag == StatusGood {
		return s.Good
	}
	return -1
}
